Achtergrond aan menu toegevoegd

--- a/Game/Game/MainWindow.xaml
+++ b/Game/Game/MainWindow.xaml
@@ -6,7 +6,10 @@
         xmlns:local="clr-namespace:Game"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-    <Grid Margin="0,0,3.6,0">
+    <Grid Margin="0,0,3.6,0" Initialized="Grid_Initialized">
+        <Grid.Background>
+            <ImageBrush ImageSource="halloween.gif" Stretch="UniformToFill"/>
+        </Grid.Background>
         <Label Content="Trick or treat" HorizontalAlignment="center" VerticalAlignment="top" Margin="30" RenderTransformOrigin="-0.497,0.216" Height="74" Width="236" FontSize="36" FontWeight="Bold"/>
         <Button Content="Play" HorizontalAlignment="Left" Margin="35,146,0,0" VerticalAlignment="Top" Width="120" Height="36" FontSize="18" IsDefault="True"/>
         <Button Content="Highscore" HorizontalAlignment="Left" Margin="35,217,0,0" VerticalAlignment="Top" Width="120" Height="36" FontSize="18" IsDefault="True"/>
