Extra Commit(was bestanden vergeten aan toe te voegen

--- a/Game/Game/App.xaml
+++ b/Game/Game/App.xaml
@@ -4,6 +4,12 @@
              xmlns:local="clr-namespace:Game"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="/Game.Theme;component/Theme.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+        
     </Application.Resources>
 </Application>
