--- a/Game/Game/MainWindow.xaml
+++ b/Game/Game/MainWindow.xaml
@@ -5,16 +5,17 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Game"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid Margin="0,0,3.6,0" Initialized="Grid_Initialized">
+        Title="MainWindow" Height="720" Width="1280">
+    <Grid Margin="0,0,3.6,0">
+        <Label Content="Trick || treat" HorizontalAlignment="center" VerticalAlignment="top" Height="89" Width="495" FontSize="80" FontFamily="Hallowen Inline" FontWeight="Bold" Panel.ZIndex="1"/>
+        <Button x:Name="play" Content="Play" HorizontalAlignment="Left" Margin="126,157,0,0" VerticalAlignment="Top" FontFamily="Hallowen Inline" FontWeight="Bold" Background="{x:Null}" BorderBrush="{x:Null}" Cursor="Arrow" Click="play_Click"/>
+        <Button x:Name="customize" Content="Customize" HorizontalAlignment="Left" Margin="126,257,0,0" VerticalAlignment="Top" FontFamily="Hallowen Inline" FontWeight="Bold" Background="{x:Null}" BorderBrush="{x:Null}" Cursor="Arrow" Click="customize_Click"/>
+        <!--
+            <Button x:Name="highscore" Content="highscore" HorizontalAlignment="Left" Margin="108,325,0,0" VerticalAlignment="Top" Width="200" Height="48" FontSize="40" FontFamily="Hallowen Inline" FontWeight="Bold" Background="{x:Null}" BorderBrush="{x:Null}" Cursor="Arrow" Click="highscore_Click" />
+            -->
+        <Button x:Name="exit" Content="Exit" HorizontalAlignment="Left" Margin="126,580,0,0" VerticalAlignment="Top" FontFamily="Hallowen Inline" FontWeight="Bold" Background="{x:Null}" BorderBrush="{x:Null}" Cursor="Arrow" Click="exit_Click" RenderTransformOrigin="0.864,-0.714" />
         <Grid.Background>
-            <ImageBrush ImageSource="halloween.gif" Stretch="UniformToFill"/>
+            <ImageBrush ImageSource="Background_Menu2.jpg"></ImageBrush>
         </Grid.Background>
-        <Label Content="Trick or treat" HorizontalAlignment="center" VerticalAlignment="top" Margin="30" RenderTransformOrigin="-0.497,0.216" Height="74" Width="236" FontSize="36" FontWeight="Bold"/>
-        <Button Content="Play" HorizontalAlignment="Left" Margin="35,146,0,0" VerticalAlignment="Top" Width="120" Height="36" FontSize="18" IsDefault="True"/>
-        <Button Content="Highscore" HorizontalAlignment="Left" Margin="35,217,0,0" VerticalAlignment="Top" Width="120" Height="36" FontSize="18" IsDefault="True"/>
-        <Button Content="Customize" HorizontalAlignment="Left" Margin="35,286,0,0" VerticalAlignment="Top" Width="120" Height="36" FontSize="18" IsDefault="True"/>
-        <Button Content="Exit" HorizontalAlignment="Left" Margin="35,374,0,0" VerticalAlignment="Top" Width="120" Height="36" FontSize="18" IsDefault="True" Click="Button_Click"/>
-
     </Grid>
 </Window>
