--- a/Game/Game/MainWindow.xaml
+++ b/Game/Game/MainWindow.xaml
@@ -5,16 +5,17 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Game"
         mc:Ignorable="d"
-        Title="MainWindow" Height="720" Width="1280">
+        Title="MainWindow" Height="1080" Width="1920"
+        WindowStyle="None" ResizeMode="NoResize"  
+        WindowStartupLocation="CenterScreen" WindowState="Maximized">
+
+
     <Grid Margin="0,0,3.6,0">
-        <Label Content="Trick || treat" HorizontalAlignment="center" VerticalAlignment="top" Height="89" Width="495" FontSize="80" FontFamily="/Game;component/#Hallowen Inline" FontWeight="Bold" Panel.ZIndex="1"/>
-        <Button x:Name="play" Content="Play" HorizontalAlignment="Left" Margin="126,157,0,0" VerticalAlignment="Top" FontFamily="/Game;component/#Hallowen Inline" FontWeight="Bold" Background="{x:Null}" BorderBrush="{x:Null}" Cursor="Arrow" Click="play_Click"/>
-        <!--<Button x:Name="customize" Content="Customize" HorizontalAlignment="Left" Margin="126,257,0,0" VerticalAlignment="Top" FontFamily="Hallowen Inline" FontWeight="Bold" Background="{x:Null}" BorderBrush="{x:Null}" Cursor="Arrow" Click="customize_Click"/>
-        
-        --><!--
-            <Button x:Name="highscore" Content="highscore" HorizontalAlignment="Left" Margin="108,325,0,0" VerticalAlignment="Top" Width="200" Height="48" FontSize="40" FontFamily="Hallowen Inline" FontWeight="Bold" Background="{x:Null}" BorderBrush="{x:Null}" Cursor="Arrow" Click="highscore_Click" />
-            -->
-        <Button x:Name="exit" Content="Exit" HorizontalAlignment="Left" Margin="126,580,0,0" VerticalAlignment="Top" FontFamily="/Game;component/#Hallowen Inline" FontWeight="Bold" Background="{x:Null}" BorderBrush="{x:Null}" Cursor="Arrow" Click="exit_Click" RenderTransformOrigin="0.864,-0.714" />
+        <Label Content="Trick || Treat" HorizontalAlignment="center" VerticalAlignment="top" Height="89" Width="495" FontSize="80" FontFamily="/Game;component/#Hallowen Inline" Panel.ZIndex="1"/>
+        <Button x:Name="play" Content="Play"  Margin="0,0,1570.4,429" VerticalAlignment="Bottom" FontFamily="/Game;component/#Hallowen Inline" Background="{x:Null}" BorderBrush="{x:Null}" Cursor="Arrow" Click="play_Click" FontWeight="Bold" Width="220" HorizontalAlignment="Right"/>
+        <Button x:Name="customize" Content="Customize" HorizontalAlignment="Left" Margin="126,0,0,310.4" VerticalAlignment="Bottom" FontFamily="Hallowen Inline" Background="{x:Null}" BorderBrush="{x:Null}" Cursor="Arrow" Click="customize_Click"/>
+        <Button x:Name="highscore" Content="Highscore" HorizontalAlignment="Left" Margin="126,0,0,210.4" VerticalAlignment="Bottom" FontFamily="Hallowen Inline" Background="{x:Null}" BorderBrush="{x:Null}" Cursor="Arrow" Click="highscore_Click" />
+        <Button x:Name="exit" Content="Exit" HorizontalAlignment="Left" Margin="126,0,0,10.4" VerticalAlignment="Bottom" FontFamily="/Game;component/#Hallowen Inline" Background="{x:Null}" BorderBrush="{x:Null}" Cursor="Arrow" Click="exit_Click" RenderTransformOrigin="0.864,-0.714" />
         <Grid.Background>
             <ImageBrush ImageSource="Background_Menu2.jpg"></ImageBrush>
         </Grid.Background>
