--- a/Game/Game/MainWindow.xaml
+++ b/Game/Game/MainWindow.xaml
@@ -10,7 +10,7 @@
         WindowStartupLocation="CenterScreen" WindowState="Maximized">
 
 
-    <Grid Margin="0,0,3.6,0">
+    <Grid>
         <Label Content="Trick || Treat" HorizontalAlignment="center" VerticalAlignment="top" Height="89" Width="495" FontSize="80" FontFamily="/Game;component/#Hallowen Inline" Panel.ZIndex="1"/>
         <Button x:Name="play" Content="Play"  Margin="126,0,0,477" VerticalAlignment="Bottom" FontFamily="/Game;component/#Hallowen Inline" Background="{x:Null}" BorderBrush="{x:Null}" Cursor="Arrow" Click="play_Click" FontWeight="Bold" HorizontalAlignment="Left"/>
         <Button x:Name="customize" Content="Customize" HorizontalAlignment="Left" Margin="126,0,0,372" VerticalAlignment="Bottom" FontFamily="/Game;component/#Hallowen Inline" Background="{x:Null}" BorderBrush="{x:Null}" Cursor="Arrow" Click="customize_Click"/>
