--- a/Game/Game/View/Level1.xaml
+++ b/Game/Game/View/Level1.xaml
@@ -7,11 +7,33 @@
         mc:Ignorable="d"
         Title="Level1" Height="1080" Width="1920"  WindowStartupLocation="CenterScreen" WindowState="Maximized" WindowStyle="None" ResizeMode="NoResize" Loaded="Window_Loaded">
     <Canvas x:Name="level1">
-        <Image Height="119" Canvas.Left="189" Source="/Game;component/tree.jpg" Stretch="Fill" Canvas.Top="320" Width="122" RenderTransformOrigin="2.381,2.789"/>
-        <Image Height="132" Canvas.Left="189" Source="/Game;component/tree.jpg" Stretch="Fill" Canvas.Top="444" Width="122" RenderTransformOrigin="0.467,1.666"/>
-        <Image Height="116" Canvas.Left="510" Source="/Game;component/tree.jpg" Stretch="Fill" Canvas.Top="320" Width="122" RenderTransformOrigin="0.4,2.442"/>
-        <Image Height="277" Canvas.Left="299" Source="/Game;component/house.png" Stretch="Fill" Canvas.Top="38" Width="230"/>
-        <Image Height="116" Canvas.Left="510.4" Source="/Game;component/tree.jpg" Stretch="Fill" Canvas.Top="320" Width="122" RenderTransformOrigin="0.4,2.442"/>
-        <Image Height="116" Canvas.Left="510" Source="/Game;component/tree.jpg" Stretch="Fill" Canvas.Top="460" Width="122" RenderTransformOrigin="0.4,2.442"/>
+        <Image Height="73" Canvas.Left="189" Source="/Game;component/tree.jpg" Stretch="Fill" Canvas.Top="182" Width="77" RenderTransformOrigin="2.381,2.789"/>
+        <Image Height="80" Canvas.Left="189" Source="/Game;component/tree.jpg" Stretch="Fill" Canvas.Top="258" Width="77" RenderTransformOrigin="0.467,1.666"/>
+        <Image Height="72" Canvas.Left="392" Source="/Game;component/tree.jpg" Stretch="Fill" Canvas.Top="182" Width="77" RenderTransformOrigin="0.4,2.442"/>
+        <Image Height="169" Canvas.Left="259" Source="/Game;component/house.png" Stretch="Fill" Canvas.Top="12" Width="145"/>
+        <Image Height="72" Canvas.Left="392" Source="/Game;component/tree.jpg" Stretch="Fill" Canvas.Top="182" Width="77" RenderTransformOrigin="0.4,2.442"/>
+        <Image Height="71" Canvas.Left="392" Source="/Game;component/tree.jpg" Stretch="Fill" Canvas.Top="268" Width="77" RenderTransformOrigin="0.4,2.442"/>
+        <Image Height="73" Canvas.Left="496" Source="/Game;component/tree.jpg" Stretch="Fill" Canvas.Top="182" Width="77" RenderTransformOrigin="2.381,2.789"/>
+        <Image Height="80" Canvas.Left="496" Source="/Game;component/tree.jpg" Stretch="Fill" Canvas.Top="258" Width="77" RenderTransformOrigin="0.467,1.666"/>
+        <Image Height="72" Canvas.Left="699" Source="/Game;component/tree.jpg" Stretch="Fill" Canvas.Top="182" Width="77" RenderTransformOrigin="0.4,2.442"/>
+        <Image Height="169" Canvas.Left="566" Source="/Game;component/house.png" Stretch="Fill" Canvas.Top="12" Width="145"/>
+        <Image Height="72" Canvas.Left="699" Source="/Game;component/tree.jpg" Stretch="Fill" Canvas.Top="182" Width="77" RenderTransformOrigin="0.4,2.442"/>
+        <Image Height="71" Canvas.Left="699" Source="/Game;component/tree.jpg" Stretch="Fill" Canvas.Top="268" Width="77" RenderTransformOrigin="0.4,2.442"/>
+        <Image Height="105" Canvas.Left="189" Source="/Game;component/path.jpg" Stretch="Fill" Canvas.Top="343" Width="102" IsEnabled="False"/>
+        <Image Height="105" Canvas.Left="285" Source="/Game;component/path.jpg" Stretch="Fill" Canvas.Top="343" Width="102" IsEnabled="False"/>
+        <Image Height="105" Canvas.Left="375" Source="/Game;component/path.jpg" Stretch="Fill" Canvas.Top="343" Width="102" IsEnabled="False"/>
+        <Image Height="105" Canvas.Left="471" Source="/Game;component/path.jpg" Stretch="Fill" Canvas.Top="343" Width="102" IsEnabled="False"/>
+        <Image Height="105" Canvas.Left="557" Source="/Game;component/path.jpg" Stretch="Fill" Canvas.Top="344" Width="102" IsEnabled="False"/>
+        <Image Height="105" Canvas.Left="653" Source="/Game;component/path.jpg" Stretch="Fill" Canvas.Top="344" Width="102" IsEnabled="False"/>
+        <Image Height="105" Canvas.Left="743" Source="/Game;component/path.jpg" Stretch="Fill" Canvas.Top="343" Width="102" IsEnabled="False"/>
+        <Image Height="105" Canvas.Left="839" Source="/Game;component/path.jpg" Stretch="Fill" Canvas.Top="343" Width="102" IsEnabled="False"/>
+        <Image Height="105" Canvas.Left="189" Source="/Game;component/path.jpg" Stretch="Fill" Canvas.Top="448" Width="102" IsEnabled="False"/>
+        <Image Height="105" Canvas.Left="285" Source="/Game;component/path.jpg" Stretch="Fill" Canvas.Top="448" Width="102" IsEnabled="False"/>
+        <Image Height="105" Canvas.Left="375" Source="/Game;component/path.jpg" Stretch="Fill" Canvas.Top="448" Width="102" IsEnabled="False"/>
+        <Image Height="105" Canvas.Left="471" Source="/Game;component/path.jpg" Stretch="Fill" Canvas.Top="448" Width="102" IsEnabled="False"/>
+        <Image Height="105" Canvas.Left="557" Source="/Game;component/path.jpg" Stretch="Fill" Canvas.Top="449" Width="102" IsEnabled="False"/>
+        <Image Height="105" Canvas.Left="653" Source="/Game;component/path.jpg" Stretch="Fill" Canvas.Top="449" Width="102" IsEnabled="False"/>
+        <Image Height="105" Canvas.Left="743" Source="/Game;component/path.jpg" Stretch="Fill" Canvas.Top="448" Width="102" IsEnabled="False"/>
+        <Image Height="105" Canvas.Left="839" Source="/Game;component/path.jpg" Stretch="Fill" Canvas.Top="448" Width="102" IsEnabled="False"/>
     </Canvas>
 </Window>
