--- a/Game/Game/View/Level1.xaml
+++ b/Game/Game/View/Level1.xaml
@@ -5,62 +5,29 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Game"
         mc:Ignorable="d"
-        Title="Level1" Height="1080" Width="1920"  WindowStartupLocation="CenterScreen" WindowState="Maximized" WindowStyle="None" ResizeMode="NoResize" Loaded="Window_Loaded">
-    <Canvas x:Name="level1">
-        <Image Height="105" Canvas.Left="159" Source="/Game;component/path.jpg" Stretch="Fill" Canvas.Top="341" Width="102" IsEnabled="False"/>
-        <Image Height="105" Canvas.Left="255" Source="/Game;component/path.jpg" Stretch="Fill" Canvas.Top="341" Width="102" IsEnabled="False"/>
-        <Image Height="105" Canvas.Left="346" Source="/Game;component/path.jpg" Stretch="Fill" Canvas.Top="341" Width="102" IsEnabled="False"/>
-        <Image Height="105" Canvas.Left="442" Source="/Game;component/path.jpg" Stretch="Fill" Canvas.Top="341" Width="102" IsEnabled="False"/>
-        <Image Height="105" Canvas.Left="527" Source="/Game;component/path.jpg" Stretch="Fill" Canvas.Top="342" Width="102" IsEnabled="False"/>
-        <Image Height="105" Canvas.Left="623" Source="/Game;component/path.jpg" Stretch="Fill" Canvas.Top="342" Width="102" IsEnabled="False"/>
-        <Image Height="105" Canvas.Left="714" Source="/Game;component/path.jpg" Stretch="Fill" Canvas.Top="341" Width="102" IsEnabled="False"/>
-        <Image Height="105" Canvas.Left="810" Source="/Game;component/path.jpg" Stretch="Fill" Canvas.Top="341" Width="102" IsEnabled="False"/>
-        <Image Height="105" Canvas.Left="159" Source="/Game;component/path.jpg" Stretch="Fill" Canvas.Top="434" Width="102" IsEnabled="False"/>
-        <Image Height="105" Canvas.Left="255" Source="/Game;component/path.jpg" Stretch="Fill" Canvas.Top="434" Width="102" IsEnabled="False"/>
-        <Image Height="105" Canvas.Left="346" Source="/Game;component/path.jpg" Stretch="Fill" Canvas.Top="434" Width="102" IsEnabled="False"/>
-        <Image Height="105" Canvas.Left="442" Source="/Game;component/path.jpg" Stretch="Fill" Canvas.Top="434" Width="102" IsEnabled="False"/>
-        <Image Height="105" Canvas.Left="527" Source="/Game;component/path.jpg" Stretch="Fill" Canvas.Top="434" Width="102" IsEnabled="False"/>
-        <Image Height="105" Canvas.Left="623" Source="/Game;component/path.jpg" Stretch="Fill" Canvas.Top="434" Width="102" IsEnabled="False"/>
-        <Image Height="105" Canvas.Left="714" Source="/Game;component/path.jpg" Stretch="Fill" Canvas.Top="434" Width="102" IsEnabled="False"/>
-        <Image Height="105" Canvas.Left="810" Source="/Game;component/path.jpg" Stretch="Fill" Canvas.Top="434" Width="102" IsEnabled="False"/>
-        <Image Height="105" Canvas.Left="159" Source="/Game;component/path.jpg" Stretch="Fill" Canvas.Top="81" Width="102" IsEnabled="False"/>
-        <Image Height="105" Canvas.Left="255" Source="/Game;component/path.jpg" Stretch="Fill" Canvas.Top="81" Width="102" IsEnabled="False"/>
-        <Image Height="105" Canvas.Left="346" Source="/Game;component/path.jpg" Stretch="Fill" Canvas.Top="81" Width="102" IsEnabled="False"/>
-        <Image Height="105" Canvas.Left="442" Source="/Game;component/path.jpg" Stretch="Fill" Canvas.Top="81" Width="102" IsEnabled="False"/>
-        <Image Height="105" Canvas.Left="527" Source="/Game;component/path.jpg" Stretch="Fill" Canvas.Top="81" Width="102" IsEnabled="False"/>
-        <Image Height="105" Canvas.Left="623" Source="/Game;component/path.jpg" Stretch="Fill" Canvas.Top="81" Width="102" IsEnabled="False"/>
-        <Image Height="105" Canvas.Left="714" Source="/Game;component/path.jpg" Stretch="Fill" Canvas.Top="81" Width="102" IsEnabled="False"/>
-        <Image Height="105" Canvas.Left="159" Source="/Game;component/path.jpg" Stretch="Fill" Width="102" IsEnabled="False"/>
-        <Image Height="105" Canvas.Left="255" Source="/Game;component/path.jpg" Stretch="Fill" Width="102" IsEnabled="False"/>
-        <Image Height="105" Canvas.Left="346" Source="/Game;component/path.jpg" Stretch="Fill" Width="102" IsEnabled="False"/>
-        <Image Height="105" Canvas.Left="442" Source="/Game;component/path.jpg" Stretch="Fill" Width="102" IsEnabled="False"/>
-        <Image Height="105" Canvas.Left="527" Source="/Game;component/path.jpg" Stretch="Fill" Width="102" IsEnabled="False"/>
-        <Image Height="105" Canvas.Left="623" Source="/Game;component/path.jpg" Stretch="Fill" Width="102" IsEnabled="False"/>
-        <Image Height="105" Canvas.Left="714" Source="/Game;component/path.jpg" Stretch="Fill" Width="102" IsEnabled="False"/>
-        <Image Height="158" Canvas.Left="266" Source="/Game;component/grass.png" Stretch="Fill" Canvas.Top="186" Width="126" IsEnabled="False"/>
-        <Image Height="158" Canvas.Left="387" Source="/Game;component/grass.png" Stretch="Fill" Canvas.Top="186" Width="126" IsEnabled="False"/>
-        <Image Height="158" Canvas.Left="469" Source="/Game;component/grass.png" Stretch="Fill" Canvas.Top="186" Width="126" IsEnabled="False"/>
-        <Image Height="158" Canvas.Left="708" Source="/Game;component/grass.png" Stretch="Fill" Canvas.Top="186" Width="126" IsEnabled="False"/>
-        <Image Height="158" Canvas.Left="159" Source="/Game;component/grass.png" Stretch="Fill" Canvas.Top="186" Width="126" IsEnabled="False"/>
-        <Image Height="158" Canvas.Left="583" Source="/Game;component/grass.png" Stretch="Fill" Canvas.Top="186" Width="126" IsEnabled="False"/>
-        <Image Height="73" Canvas.Left="189" Source="/Game;component/tree.png" Stretch="Fill" Canvas.Top="186" Width="77" RenderTransformOrigin="2.381,2.789"/>
-        <Image Height="80" Canvas.Left="189" Source="/Game;component/tree.png" Stretch="Fill" Canvas.Top="258" Width="77" RenderTransformOrigin="0.467,1.666"/>
-        <Image Height="72" Canvas.Left="392" Source="/Game;component/tree.png" Stretch="Fill" Canvas.Top="182" Width="77" RenderTransformOrigin="0.4,2.442"/>
-        <Image Height="169" Canvas.Left="259" Source="/Game;component/house.png" Stretch="Fill" Canvas.Top="12" Width="145"/>
-        <Image Height="72" Canvas.Left="392" Source="/Game;component/tree.png" Stretch="Fill" Canvas.Top="182" Width="77" RenderTransformOrigin="0.4,2.442"/>
-        <Image Height="71" Canvas.Left="392" Source="/Game;component/tree.png" Stretch="Fill" Canvas.Top="268" Width="77" RenderTransformOrigin="0.4,2.442"/>
-        <Image Height="73" Canvas.Left="496" Source="/Game;component/tree.png" Stretch="Fill" Canvas.Top="182" Width="77" RenderTransformOrigin="2.381,2.789"/>
-        <Image Height="80" Canvas.Left="501" Source="/Game;component/tree.png" Stretch="Fill" Canvas.Top="260" Width="77" RenderTransformOrigin="0.467,1.666"/>
-        <Image Height="169" Canvas.Left="566" Source="/Game;component/house.png" Stretch="Fill" Canvas.Top="12" Width="145"/>
-        <Image Height="72" Canvas.Left="709" Source="/Game;component/tree.png" Stretch="Fill" Canvas.Top="190" Width="77" RenderTransformOrigin="0.4,2.442" />
-        <Image Height="71" Canvas.Left="709" Source="/Game;component/tree.png" Stretch="Fill" Canvas.Top="267" Width="77" RenderTransformOrigin="0.4,2.442" />
-        <Image Height="71" Canvas.Left="708.8" Source="/Game;component/tree.png" Stretch="Fill" Canvas.Top="267.3" Width="77" RenderTransformOrigin="0.4,2.442" />
-        <Image Height="71" Canvas.Left="708.8" Source="/Game;component/tree.png" Stretch="Fill" Canvas.Top="267.3" Width="77" RenderTransformOrigin="0.4,2.442" />
-        <Image Height="71" Canvas.Left="708.8" Source="/Game;component/tree.png" Stretch="Fill" Canvas.Top="267.3" Width="77" RenderTransformOrigin="0.4,2.442" />
-        
-        
+        Title="Level1" Height="704" Width="1280"  WindowStartupLocation="CenterScreen" WindowState="Normal" WindowStyle="None" ResizeMode="NoResize" Loaded="Window_Loaded">
+    <Grid>
 
 
+        <Canvas x:Name="level1">
+            <Image Source="Images/house.png" Canvas.Left="171" Canvas.Top="10"/>
+            <Image Source="Images/house.png" Canvas.Left="811" Canvas.Top="10"/>
+            <Image Source="Images/house.png" Canvas.Left="490" Canvas.Top="10"/>
+            <Image Source="Images/tree.png" Canvas.Left="117" Canvas.Top="173" IsEnabled="False" Panel.ZIndex="100"/>
+            <Image Source="Images/tree.png" Canvas.Left="55" Canvas.Top="304" IsEnabled="False"/>
 
-    </Canvas>
+
+        </Canvas>
+
+        <Rectangle x:Name="pausemenu" Fill="#FF595959" Opacity="0"></Rectangle>
+        <Image x:Name="plaatje" HorizontalAlignment="Right" VerticalAlignment="Bottom" Source="Images/MenuBackground.png" Stretch="Fill" Visibility="Hidden"/>
+        <TextBlock x:Name="title" Visibility="Hidden" HorizontalAlignment="Center" FontFamily="/MovementTest;component/#YouMurderer BB" TextWrapping="Wrap" Text="PAUSED" VerticalAlignment="Top" FontSize="130" Margin="235,66,226.6,0" Foreground="DarkRed"/>
+        <Button x:Name="resume" Content="Resume" Width="208" VerticalAlignment="Top" HorizontalAlignment="Center" Visibility="Hidden" Click="resume_Click" Background="{x:Null}" BorderBrush="{x:Null}" FontFamily="/MovementTest;component/#YouMurderer BB" FontSize="54" Margin="292,254,293.6,0" Foreground="DarkRed"/>
+        <Button x:Name="exit" Content="Exit" Width="208" FontFamily="/MovementTest;component/#YouMurderer BB" FontSize="54" HorizontalAlignment="Center" VerticalAlignment="Top" Visibility="Hidden" Click="exit_Click" Margin="292,351,293.6,0" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="DarkRed"/>
+
+
+        <Grid.Background>
+            <ImageBrush ImageSource="C:\Users\s1118419\Documents\WINDESHEIM\2e Jaar\KBS\KBS1SE-Game\Game\Game\View\Images\Level1.png"></ImageBrush>
+        </Grid.Background>
+    </Grid>
 </Window>
