--- a/Game/Game/View/CustomizeCharacter.xaml
+++ b/Game/Game/View/CustomizeCharacter.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CustomizeCharacter"
         mc:Ignorable="d"
-        Title="MainWindow"   Height="704" Width="1280"  WindowStartupLocation="CenterScreen" WindowState="Normal" WindowStyle="None" ResizeMode="NoResize"> 
+        Title="MainWindow" Name="CustomizeCharacter" Height="704" Width="1280"  WindowStartupLocation="CenterScreen" WindowState="Normal" WindowStyle="None" ResizeMode="NoResize">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition/>
@@ -17,27 +17,28 @@
             <ColumnDefinition/>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
-        <Label Grid.Row="0" Grid.Column="1" Content="Customize Character" HorizontalAlignment="center" VerticalAlignment="top" Height="89" Width="495" FontSize="50" FontFamily="/Game;component/#Hallowen Inline" Panel.ZIndex="1"/>
-        <Label Grid.Row="0" Grid.Column="1" Content="Select a Character" Margin="315,66,255.333,306.667" FontSize="16"></Label>
+        <Label Grid.Row="0" Grid.Column="1" Content="Customize Character" HorizontalAlignment="center" VerticalAlignment="top" Height="89" Width="auto" FontSize="40" FontFamily="/Game;component/#Hallowen Inline" Panel.ZIndex="1"/>
+        <Label Grid.Row="0" Grid.Column="1" Content="Select a Character" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="30" FontFamily="/Game;component/#Hallowen Inline"></Label>
         <Button Grid.Row="2" Grid.Column="0" x:Name="back" Content="Back" HorizontalAlignment="Left" Margin="126,0,0,10.4" VerticalAlignment="Bottom" FontFamily="/Game;component/#Hallowen Inline" Background="{x:Null}" BorderBrush="{x:Null}" Cursor="Arrow" RenderTransformOrigin="0.864,-0.714" Foreground="White" />
         <Button Grid.Row="2" Grid.Column="0" x:Name="exit" Content="Exit" HorizontalAlignment="Left" Margin="160,0,0,9.667" VerticalAlignment="Bottom" FontFamily="/Game;component/#Hallowen Inline" Background="{x:Null}" BorderBrush="{x:Null}" Cursor="Arrow" RenderTransformOrigin="0.864,-0.714" Foreground="White" />
 
         <Button Grid.Row="1" Grid.Column="0" Name="Player1" Background="{x:Null}" BorderBrush="Black" Click="character_Click" >
-            <Image Source="female/idle (1).png" Stretch="Uniform" Height="128" Width="92"/>
+            <Image Source="Skins/finn.png" Stretch="Uniform" Height="auto" Width="92"/>
         </Button>
-        <Label Grid.Row="1" Grid.Column="0" Content="Player 1" HorizontalAlignment="center" FontFamily="Hallowen Inline" Foreground="White" ></Label>
+        <Label Grid.Row="1" Grid.Column="0" Content="Player 1" HorizontalAlignment="center" FontFamily="/Game;component/#Hallowen Inline" Foreground="White" ></Label>
         <Button Grid.Row="1" Grid.Column="1" Name="Player2"  Background="{x:Null}" BorderBrush="Black" Foreground="#FFF60F0F" Click="character_Click">
-            <Image Source="male/idle (1).png" Stretch="Uniform" Height="128" Width="92"/>
+            <Image Source="Skins/mario.png" Stretch="Uniform" Height="auto" Width="92"/>
         </Button>
-        <Label Grid.Row="1" Grid.Column="1" Content="Player 2" HorizontalAlignment="center" FontFamily="#Hallowen Inline" Foreground="White" ></Label>
+        <Label Grid.Row="1" Grid.Column="1" Content="Player 2" HorizontalAlignment="center" FontFamily="/Game;component/#Hallowen Inline" Foreground="White" ></Label>
 
         <Button Grid.Row="1" Grid.Column="2" Name="Player3"  Background="{x:Null}" BorderBrush="Black" Foreground="#FFF60F0F" Click="character_Click">
-            <Image Source="male/idle (1).png" Stretch="Uniform" Height="128" Width="92"/>
+            <Image Source="Skins/zombie.png" Stretch="Uniform" Height="auto" Width="92"/>
         </Button>
-        <Label Grid.Row="1" Grid.Column="2" Content="PLayer 3" HorizontalAlignment="center" FontFamily="#Hallowen Inline" Foreground="White" ></Label>
+        <Label Grid.Row="1" Grid.Column="2" Content="PLayer 3" HorizontalAlignment="center" FontFamily="/Game;component/#Hallowen Inline" Foreground="White" ></Label>
 
         <Grid.Background>
             <ImageBrush ImageSource="Background_Menu2.jpg"></ImageBrush>
         </Grid.Background>
     </Grid>
 </Window>
+
