--- a/Game/Game/View/Level1.xaml
+++ b/Game/Game/View/Level1.xaml
@@ -23,10 +23,14 @@
         <Rectangle x:Name="pausemenu" Fill="#FF595959" Opacity="0"></Rectangle>
         <Image x:Name="plaatje" HorizontalAlignment="Right" VerticalAlignment="Bottom" Source="Images/MenuBackground.png" Stretch="Fill" Visibility="Hidden"/>
         <TextBlock x:Name="title" Visibility="Hidden" HorizontalAlignment="Center" FontFamily="/MovementTest;component/#YouMurderer BB" TextWrapping="Wrap" Text="PAUSED" VerticalAlignment="Top" FontSize="130" Margin="235,66,226.6,0" Foreground="DarkRed"/>
+
+        <Rectangle x:Name="gameOver" Fill="#FF595959" Opacity="0"></Rectangle>
         <Button x:Name="resume" Content="Resume" Width="208" VerticalAlignment="Top" HorizontalAlignment="Center" Visibility="Hidden" Click="resume_Click" Background="{x:Null}" BorderBrush="{x:Null}" FontFamily="/MovementTest;component/#YouMurderer BB" FontSize="54" Margin="292,254,293.6,0" Foreground="DarkRed"/>
+        <TextBlock x:Name="died" Visibility="Hidden" HorizontalAlignment="Center" FontFamily="/MovementTest;component/#YouMurderer BB" TextWrapping="Wrap" Text="YOU DIED" VerticalAlignment="Top" FontSize="130" Margin="235,66,226.6,0" Foreground="DarkRed"/>
+
+       
         <Button x:Name="exit" Content="Exit" Width="208" FontFamily="/MovementTest;component/#YouMurderer BB" FontSize="54" HorizontalAlignment="Center" VerticalAlignment="Top" Visibility="Hidden" Click="exit_Click" Margin="292,351,293.6,0" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="DarkRed"/>
-
-
+        
         <Grid.Background>
             <ImageBrush ImageSource="Images\Level1.png"></ImageBrush>
         </Grid.Background>
