--- a/Game/Game/View/Level1.xaml
+++ b/Game/Game/View/Level1.xaml
@@ -10,16 +10,26 @@
 
 
         <Canvas x:Name="level1">
-            <Image Source="Images/house.png" Canvas.Left="171" Canvas.Top="10"/>
+            <Image Source="Images/player-house.png" Canvas.Left="135" Canvas.Top="13" Height="182" Width="182"/>
             <Image Source="Images/house.png" Canvas.Left="811" Canvas.Top="10"/>
             <Image Source="Images/house.png" Canvas.Left="490" Canvas.Top="10"/>
-            <Image Source="Images/tree.png" Canvas.Left="117" Canvas.Top="173" IsEnabled="False" Panel.ZIndex="1"/>
-            <Image Source="Images/tree.png" Canvas.Left="55" Canvas.Top="304" IsEnabled="False"/>
-
+            <Image Source="Images/tree_part3.png" Canvas.Left="153" Canvas.Top="246"/>
+            <Image Source="Images/tree_part4.png" Canvas.Left="134" Canvas.Top="175" IsEnabled="False" Panel.ZIndex="1"/>
+            <Image Source="Images/tree_part3.png" Canvas.Left="256" Canvas.Top="246"/>
+            <Image Source="Images/tree_part4.png" Canvas.Left="237" Canvas.Top="175" IsEnabled="False" Panel.ZIndex="1"/>
+            <Image Source="Images/tree_part3.png" Canvas.Left="472" Canvas.Top="246"/>
+            <Image Source="Images/tree_part4.png" Canvas.Left="453" Canvas.Top="175" IsEnabled="False" Panel.ZIndex="1"/>
+            <Image Source="Images/tree_part3.png" Canvas.Left="576" Canvas.Top="246"/>
+            <Image Source="Images/tree_part4.png" Canvas.Left="557" Canvas.Top="175" IsEnabled="False" Panel.ZIndex="1"/>
+            <Image Source="Images/tree_part3.png" Canvas.Left="792" Canvas.Top="246"/>
+            <Image Source="Images/tree_part4.png" Canvas.Left="773" Canvas.Top="175" IsEnabled="False" Panel.ZIndex="1"/>
+            <Image Source="Images/tree_part3.png" Canvas.Left="896" Canvas.Top="246"/>
+            <Image Source="Images/tree_part4.png" Canvas.Left="877" Canvas.Top="175" IsEnabled="False" Panel.ZIndex="1"/>
 
 
         </Canvas>
 
+             
         <Rectangle x:Name="pausemenu" Fill="#FF595959" Opacity="0"></Rectangle>
         <Image x:Name="plaatje" HorizontalAlignment="Right" VerticalAlignment="Bottom" Source="Images/MenuBackground.png" Stretch="Fill" Visibility="Hidden"/>
         <TextBlock x:Name="title" Visibility="Hidden" HorizontalAlignment="Center" FontFamily="/MovementTest;component/#YouMurderer BB" TextWrapping="Wrap" Text="PAUSED" VerticalAlignment="Top" FontSize="130" Margin="235,66,226.6,0" Foreground="DarkRed"/>
@@ -27,9 +37,9 @@
         <Rectangle x:Name="gameOver" Fill="#FF595959" Opacity="0"></Rectangle>
         <Button x:Name="resume" Content="Resume" Width="208" VerticalAlignment="Top" HorizontalAlignment="Center" Visibility="Hidden" Click="resume_Click" Background="{x:Null}" BorderBrush="{x:Null}" FontFamily="/MovementTest;component/#YouMurderer BB" FontSize="54" Margin="292,254,293.6,0" Foreground="DarkRed"/>
         <TextBlock x:Name="died" Visibility="Hidden" HorizontalAlignment="Center" FontFamily="/MovementTest;component/#YouMurderer BB" TextWrapping="Wrap" Text="YOU DIED" VerticalAlignment="Top" FontSize="130" Margin="235,66,226.6,0" Foreground="DarkRed"/>
-
-       
+        
         <Button x:Name="exit" Content="Exit" Width="208" FontFamily="/MovementTest;component/#YouMurderer BB" FontSize="54" HorizontalAlignment="Center" VerticalAlignment="Top" Visibility="Hidden" Click="exit_Click" Margin="292,351,293.6,0" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="DarkRed"/>
+        
         
         <Grid.Background>
             <ImageBrush ImageSource="Images\Level1.png"></ImageBrush>
