--- a/Game/Game/View/CustomizeCharacter.xaml
+++ b/Game/Game/View/CustomizeCharacter.xaml
@@ -16,24 +16,24 @@
             <ColumnDefinition/>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
-        <Label Grid.Row="0" Grid.Column="1" Content="Customize Character" HorizontalAlignment="center" VerticalAlignment="top" Height="89" Width="auto" FontSize="40" FontFamily="/Game;component/#Hallowen Inline" Panel.ZIndex="1"/>
-        <Label Grid.Row="0" Grid.Column="1" Content="Select a Character" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="30" FontFamily="/Game;component/#Hallowen Inline"></Label>
-        <Button Grid.Row="2" Grid.Column="0" x:Name="back" Content="Back" HorizontalAlignment="Left" Margin="126,0,0,10.4" VerticalAlignment="Bottom" FontFamily="/Game;component/#Hallowen Inline" Background="{x:Null}" BorderBrush="{x:Null}" Cursor="Arrow" RenderTransformOrigin="0.864,-0.714" Foreground="White" Click="back_Click" />
-      
+        <Label Grid.Row="0" Grid.Column="1" Content="Customize Character" HorizontalAlignment="center" VerticalAlignment="top" Height="89" Width="auto" FontSize="40" FontFamily="/Trick Or Treat;component/View/Fonts/#Hallowen Inline" Panel.ZIndex="1"/>
+        <Label Grid.Row="0" Grid.Column="1" Content="Select a Character" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="30" FontFamily="/Trick Or Treat;component/View/Fonts/#Hallowen Inline"></Label>
+        <Button Grid.Row="2" Grid.Column="0" x:Name="back" Content="Back" HorizontalAlignment="Left" Margin="126,0,0,10.4" VerticalAlignment="Bottom" FontFamily="/Trick Or Treat;component/View/Fonts/#Hallowen Inline" Background="{x:Null}" BorderBrush="{x:Null}" Cursor="Arrow" RenderTransformOrigin="0.864,-0.714" Foreground="White" Click="back_Click" />
 
-        <Button Grid.Row="1" Grid.Column="0" Name="Finn" Background="Gray" BorderBrush="black" Click="character_Click"  Height="auto" Width="400">
+
+        <Button Grid.Row="1" Grid.Column="0" Name="Finn" Background="{x:Null}" BorderBrush="black" Click="character_Click"  Height="auto" Width="400">
             <Image Source="Skins/finn.png" Stretch="Uniform" Height="auto" Width="92"/>
         </Button>
-        <Label Grid.Row="1" Grid.Column="0" Content="Finn" HorizontalAlignment="center" FontFamily="/Game;component/#Hallowen Inline" Foreground="White" ></Label>
-        <Button Grid.Row="1" Grid.Column="1" Name="Mario"  Background="Gray" BorderBrush="Black" Foreground="#FFF60F0F" Click="character_Click" Height="auto" Width="400">
+        <Label Grid.Row="1" Grid.Column="0" Content="Finn" HorizontalAlignment="center" FontFamily="/Trick Or Treat;component/View/Fonts/#Hallowen Inline" Foreground="White" ></Label>
+        <Button Grid.Row="1" Grid.Column="1" Name="Mario"  Background="{x:Null}" BorderBrush="Black" Foreground="#FFF60F0F" Click="character_Click" Height="auto" Width="400">
             <Image Source="Skins/mario.png" Stretch="Uniform" Height="auto" Width="92"/>
         </Button>
-        <Label Grid.Row="1" Grid.Column="1" Content="Mario" HorizontalAlignment="center" FontFamily="/Game;component/#Hallowen Inline" Foreground="White" ></Label>
+        <Label Grid.Row="1" Grid.Column="1" Content="Mario" HorizontalAlignment="center" FontFamily="/Trick Or Treat;component/View/Fonts/#Hallowen Inline" Foreground="White" ></Label>
 
-        <Button Grid.Row="1" Grid.Column="2" Name="Zombie"  Background="Gray" BorderBrush="Black" Foreground="#FFF60F0F" Click="character_Click" Height="auto" Width="400">
+        <Button Grid.Row="1" Grid.Column="2" Name="Zombie"  Background="{x:Null}" BorderBrush="Black" Foreground="#FFF60F0F" Click="character_Click" Height="auto" Width="400">
             <Image Source="Skins/zombie.png" Stretch="Uniform" Height="auto" Width="92"/>
         </Button>
-        <Label Grid.Row="1" Grid.Column="2" Content="Zombie" HorizontalAlignment="center" FontFamily="/Game;component/#Hallowen Inline" Foreground="White" ></Label>
+        <Label Grid.Row="1" Grid.Column="2" Content="Zombie" HorizontalAlignment="center" FontFamily="/Trick Or Treat;component/View/Fonts/#Hallowen Inline" Foreground="White" ></Label>
 
         <Grid.Background>
             <ImageBrush ImageSource="Images/Background_Menu2.jpg"></ImageBrush>
